// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross-framework snapshots > generates stable snapshots for Button 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
}

const Button = React.forwardRef<HTMLButtonElement, ButtonProps>(
  function Button(
    {
  disabled = false,
  size = "default",
  variant = "default",
      className,
      ...props
    },
    ref
  ) {
    return (
      <button
        ref={ref} role="button"
        data-size={size !== undefined ? size : undefined}
        data-variant={variant !== undefined ? variant : undefined}
        className={cn("button", className)}
        {...props}
      />
    );
  }
);
Button.displayName = "Button";

export { Button };
",
        "path": "button/Button.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate button\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Button" });

interface ButtonProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
  class?: string;
}

const props = withDefaults(defineProps<ButtonProps>(), {
  disabled: false,
  size: "default",
  variant: "default",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["button", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <button
  role="button"
  :data-size="props.size"
  :data-variant="props.variant"
  :aria-disabled="props["aria-disabled"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </button>
</template>
",
        "path": "button/Button.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate button\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  /** Variant: size */
  size?: "default" | "sm" | "lg";
  /** Variant: variant */
  variant?: "default" | "outline";
    class?: string;
  }

  let props: Props = $props();
  const defaultProps = {
  disabled: false,
  size: "default",
  variant: "default",
  } as const;

  let propsWithDefaults = $derived({ ...defaultProps, ...props });
  let className = $derived(["button", propsWithDefaults.class].filter(Boolean).join(" "));
</script>

<button
  role="button"
  data-size={propsWithDefaults.size}
  data-variant={propsWithDefaults.variant}
  {aria-disabled}={propsWithDefaults["aria-disabled"]}
  class={className}
>
  <slot />
</button>
",
        "path": "button/button.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-button",
  standalone: true,
  template: \`
    <div class="button">
      <ng-content />
    </div>
  \`,
})
export class ButtonComponent {
  @Input() disabled?: boolean = false;
  @Input() size?: "default" | "sm" | "lg" = "default";
  @Input() variant?: "default" | "outline" = "default";
}
",
        "path": "button/button.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate button\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-button")
export class ButtonElement extends LitElement {
  @property({ attribute: "aria-disabled" }) ariaDisabled!: string;
  @property({ attribute: "disabled" }) disabled!: boolean = false;
  @property({ attribute: "size" }) size!: "default" | "sm" | "lg" = "default";
  @property({ attribute: "variant" }) variant!: "default" | "outline" = "default";

  override render() {
    return html\`
      <button
      role="button"
      data-size="\${this.size ?? ""}"
      data-variant="\${this.variant ?? ""}"
      aria-disabled="\${this.ariaDisabled ?? ""}"
      >
        <slot></slot>
      </button>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-button": ButtonElement;
  }
}
",
        "path": "button/foundry-button.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for Card 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
}

const Card = React.forwardRef<HTMLDivElement, CardProps>(
  function Card(
    {
  elevated = false,
  tone = "default",
      className,
      ...props
    },
    ref
  ) {
    return (
      <div
        ref={ref}
        data-tone={tone !== undefined ? tone : undefined}
        className={cn("card", className)}
        {...props}
      />
    );
  }
);
Card.displayName = "Card";

export { Card };
",
        "path": "card/Card.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate card\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Card" });

interface CardProps {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
  class?: string;
}

const props = withDefaults(defineProps<CardProps>(), {
  elevated: false,
  tone: "default",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["card", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <div
  :data-tone="props.tone"

    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </div>
</template>
",
        "path": "card/Card.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate card\` to regenerate -->
<script lang="ts">
  interface Props {
  elevated?: boolean;
  /** Variant: tone */
  tone?: "default" | "muted";
    class?: string;
  }

  let props: Props = $props();
  const defaultProps = {
  elevated: false,
  tone: "default",
  } as const;

  let propsWithDefaults = $derived({ ...defaultProps, ...props });
  let className = $derived(["card", propsWithDefaults.class].filter(Boolean).join(" "));
</script>

<div
  data-tone={propsWithDefaults.tone}

  class={className}
>
  <slot />
</div>
",
        "path": "card/card.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-card",
  standalone: true,
  template: \`
    <div class="card">
      <ng-content />
    </div>
  \`,
})
export class CardComponent {
  @Input() elevated?: boolean = false;
  @Input() tone?: "default" | "muted" = "default";
}
",
        "path": "card/card.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate card\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-card")
export class CardElement extends LitElement {
  @property({ attribute: "elevated" }) elevated!: boolean = false;
  @property({ attribute: "tone" }) tone!: "default" | "muted" = "default";

  override render() {
    return html\`
      <div
      data-tone="\${this.tone ?? ""}"

      >
        <slot></slot>
      </div>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-card": CardElement;
  }
}
",
        "path": "card/foundry-card.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for Dialog 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate dialog\` to regenerate
import * as React from "react";
import { createPortal } from "react-dom";
import { cn } from "../utils/cn.js";

export interface DialogProps extends React.HTMLAttributes<HTMLDialogElement> {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  open?: boolean;
  /** Variant: size */
  size?: "sm" | "md" | "lg";
}

const Dialog = React.forwardRef<HTMLDialogElement, DialogProps>(
  function Dialog(
    {
  open = false,
  size = "md",
      className,
      ...props
    },
    ref
  ) {
    const overlayRef = React.useRef<HTMLDialogElement | null>(null);
    const [open, setOpen] = React.useState(false);

    React.useEffect(() => {
      if (!open) return;

      const onKeyDown = (event: KeyboardEvent) => {
        if (event.key === "Escape") setOpen(false);
      };

      const trapFocus = (event: KeyboardEvent) => {
        if (event.key !== "Tab") return;
        const root = overlayRef.current;
        if (!root) return;

        const focusable = root.querySelectorAll<HTMLElement>(
          'button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])',
        );
        if (focusable.length === 0) return;

        const first = focusable[0];
        const last = focusable[focusable.length - 1];

        if (event.shiftKey && document.activeElement === first) {
          event.preventDefault();
          last?.focus();
        } else if (!event.shiftKey && document.activeElement === last) {
          event.preventDefault();
          first?.focus();
        }
      };

      document.addEventListener("keydown", onKeyDown);
      document.addEventListener("keydown", trapFocus);
      return () => {
        document.removeEventListener("keydown", onKeyDown);
        document.removeEventListener("keydown", trapFocus);
      };
    }, [open]);

    const overlayContent = (
      <dialog
        ref={overlayRef} role="dialog"
        data-size={size !== undefined ? size : undefined}
        className={cn("dialog", className)}
        {...props}
      />
    );

    if (!open || typeof document === "undefined") {
      return (
        <dialog
          ref={ref} role="dialog"
        data-size={size !== undefined ? size : undefined}

        aria-hidden={!open}
        onClick={() => setOpen((value) => !value)}
          className={cn("dialog", className)}
          {...props}
        />
      );
    }

    // Portal rendering strategy: overlays mount into document.body.
    return createPortal(overlayContent, document.body);
  }
);
Dialog.displayName = "Dialog";

export { Dialog };
",
        "path": "dialog/Dialog.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate dialog\` to regenerate -->
<script setup lang="ts">
import { computed, onBeforeUnmount, onMounted, ref, useAttrs } from "vue";

defineOptions({ name: "Dialog" });

interface DialogProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  open?: boolean;
  /** Variant: size */
  size?: "sm" | "md" | "lg";
  class?: string;
}

const props = withDefaults(defineProps<DialogProps>(), {
  open: false,
  size: "md",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["dialog", props.class]);

const open = ref(false);
const overlayRef = ref<HTMLElement | null>(null);

function onDocumentKeydown(event: KeyboardEvent): void {
  if (event.key === "Escape") {
    open.value = false;
    return;
  }

  if (event.key !== "Tab") return;
  const root = overlayRef.value;
  if (!root) return;

  const focusable = root.querySelectorAll<HTMLElement>(
    'button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])',
  );
  if (focusable.length === 0) return;

  const first = focusable[0];
  const last = focusable[focusable.length - 1];

  if (event.shiftKey && document.activeElement === first) {
    event.preventDefault();
    last?.focus();
  } else if (!event.shiftKey && document.activeElement === last) {
    event.preventDefault();
    first?.focus();
  }
}

onMounted(() => {
  document.addEventListener("keydown", onDocumentKeydown);
});

onBeforeUnmount(() => {
  document.removeEventListener("keydown", onDocumentKeydown);
});


function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <button type="button" @click="open = true" class="dialog-trigger">Open</button>
  <!-- Portal rendering strategy: use Vue Teleport to mount overlays in document.body -->
  <Teleport to="body">
    <dialog
      ref="overlayRef"
      v-if="open"
  role="dialog"
  :data-size="props.size"
  :aria-disabled="props["aria-disabled"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
    </dialog>
  </Teleport>
</template>
",
        "path": "dialog/Dialog.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate dialog\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  open?: boolean;
  /** Variant: size */
  size?: "sm" | "md" | "lg";
    class?: string;
  }

  let props: Props = $props();
  const defaultProps = {
  open: false,
  size: "md",
  } as const;

  let propsWithDefaults = $derived({ ...defaultProps, ...props });
  let className = $derived(["dialog", propsWithDefaults.class].filter(Boolean).join(" "));


  let open = $state(false);

  function onDocumentKeydown(event: KeyboardEvent): void {
    if (event.key === "Escape") {
      open = false;
      return;
    }

    if (event.key !== "Tab") return;

    const node = document.querySelector<HTMLElement>("[data-foundry-overlay="dialog"]");
    if (!node) return;
    const focusable = node.querySelectorAll<HTMLElement>(
      'button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])',
    );
    if (focusable.length === 0) return;

    const first = focusable[0];
    const last = focusable[focusable.length - 1];
    if (event.shiftKey && document.activeElement === first) {
      event.preventDefault();
      last?.focus();
    } else if (!event.shiftKey && document.activeElement === last) {
      event.preventDefault();
      first?.focus();
    }
  }

  function portal(node: HTMLElement) {
    // Portal rendering strategy: mount overlays directly under document.body.
    document.body.appendChild(node);
    return {
      destroy() {
        if (node.parentNode) node.parentNode.removeChild(node);
      },
    };
  }

  $effect(() => {
    document.addEventListener("keydown", onDocumentKeydown);
    return () => document.removeEventListener("keydown", onDocumentKeydown);
  });
</script>

<button type="button" class="dialog-trigger" onclick={() => (open = true)}>Open</button>

{#if open}
  <dialog
    use:portal
    data-foundry-overlay="dialog"
  role="dialog"
  data-size={propsWithDefaults.size}
  {aria-disabled}={propsWithDefaults["aria-disabled"]}
  class={className}
  >
    <slot />
  </dialog>
{/if}
",
        "path": "dialog/dialog.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate dialog\` to regenerate
import { Component, ElementRef, HostListener, Input, OnDestroy, OnInit, Renderer2, inject } from "@angular/core";

@Component({
  selector: "foundry-dialog",
  standalone: true,
  template: \`
    <button type="button" class="dialog-trigger" (click)="openOverlay()">Open</button>
    <dialog
      *ngIf="open"
      class="dialog overlay"
      tabindex="-1"
      [attr.role]="'dialog'"
      [attr.data-foundry-overlay]="'dialog'"
    >
      <ng-content />
    </dialog>
  \`,
})
export class DialogComponent implements OnInit, OnDestroy {
  @Input() open?: boolean = false;
  @Input() size?: "sm" | "md" | "lg" = "md";

  readonly host = inject(ElementRef<HTMLElement>);
  readonly renderer = inject(Renderer2);
  open = false;

  ngOnInit(): void {
    // Portal rendering strategy: move host into document.body for overlay components.
    this.renderer.appendChild(document.body, this.host.nativeElement);
  }

  ngOnDestroy(): void {
    this.renderer.removeChild(document.body, this.host.nativeElement);
  }

  openOverlay(): void {
    this.open = true;
  }

  @HostListener("document:keydown", ["$event"])
  onDocumentKeydown(event: KeyboardEvent): void {
    if (!this.open) return;
    if (event.key === "Escape") {
      this.open = false;
      return;
    }

    if (event.key !== "Tab") return;

    const root = this.host.nativeElement.querySelector<HTMLElement>("[data-foundry-overlay="dialog"]");
    if (!root) return;
    const focusable = root.querySelectorAll<HTMLElement>(
      'button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])',
    );
    if (focusable.length === 0) return;

    const first = focusable[0];
    const last = focusable[focusable.length - 1];

    if (event.shiftKey && document.activeElement === first) {
      event.preventDefault();
      last?.focus();
    } else if (!event.shiftKey && document.activeElement === last) {
      event.preventDefault();
      first?.focus();
    }
  }

}
",
        "path": "dialog/dialog.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate dialog\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-dialog")
export class DialogElement extends LitElement {
  @property({ attribute: "aria-disabled" }) ariaDisabled!: string;
  @property({ attribute: "open" }) open!: boolean = false;
  @property({ attribute: "size" }) size!: "sm" | "md" | "lg" = "md";
  @property({ type: Boolean }) open = false;

  private onDocumentKeydown = (event: KeyboardEvent): void => {
    if (!this.open) return;
    if (event.key === "Escape") {
      this.open = false;
      return;
    }

    if (event.key !== "Tab") return;

    const root = this.renderRoot.querySelector<HTMLElement>("[data-foundry-overlay="dialog"]");
    if (!root) return;
    const focusable = root.querySelectorAll<HTMLElement>(
      'button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])',
    );
    if (focusable.length === 0) return;
    const first = focusable[0];
    const last = focusable[focusable.length - 1];

    if (event.shiftKey && document.activeElement === first) {
      event.preventDefault();
      last?.focus();
    } else if (!event.shiftKey && document.activeElement === last) {
      event.preventDefault();
      first?.focus();
    }
  };

  override connectedCallback(): void {
    super.connectedCallback();
    document.addEventListener("keydown", this.onDocumentKeydown);
  }

  override disconnectedCallback(): void {
    document.removeEventListener("keydown", this.onDocumentKeydown);
    super.disconnectedCallback();
  }



  override render() {
    if (!this.open) {
      return html\`<button class="dialog-trigger" @click=\${() => (this.open = true)}>Open</button>\`;
    }

    // Portal rendering strategy: keep host mounted while overlay content is fixed and body-level layered.
    return html\`
      <dialog
        data-foundry-overlay="dialog"
      role="dialog"
      data-size="\${this.size ?? ""}"
      aria-disabled="\${this.ariaDisabled ?? ""}"
        style="position: fixed; inset: 0; z-index: 1000;"
      >
        <slot></slot>
      </dialog>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-dialog": DialogElement;
  }
}
",
        "path": "dialog/foundry-dialog.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for Input 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface InputProps extends React.InputHTMLAttributes<HTMLInputElement> {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  placeholder?: string;
}

const Input = React.forwardRef<HTMLInputElement, InputProps>(
  function Input(
    {
  disabled = false,
  placeholder = "",
      className,
      ...props
    },
    ref
  ) {
    return (
      <input
        ref={ref} role="textbox"

        className={cn("input", className)}
        {...props}
      />
    );
  }
);
Input.displayName = "Input";

export { Input };
",
        "path": "input/Input.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate input\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "Input" });

interface InputProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  placeholder?: string;
  class?: string;
}

const props = withDefaults(defineProps<InputProps>(), {
  disabled: false,
  placeholder: "",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["input", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <input
  role="textbox"

  :aria-disabled="props["aria-disabled"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </input>
</template>
",
        "path": "input/Input.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate input\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  disabled?: boolean;
  placeholder?: string;
    class?: string;
  }

  let props: Props = $props();
  const defaultProps = {
  disabled: false,
  placeholder: "",
  } as const;

  let propsWithDefaults = $derived({ ...defaultProps, ...props });
  let className = $derived(["input", propsWithDefaults.class].filter(Boolean).join(" "));
</script>

<input
  role="textbox"

  {aria-disabled}={propsWithDefaults["aria-disabled"]}
  class={className}
>
  <slot />
</input>
",
        "path": "input/input.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-input",
  standalone: true,
  template: \`
    <div class="input">
      <ng-content />
    </div>
  \`,
})
export class InputComponent {
  @Input() disabled?: boolean = false;
  @Input() placeholder?: string = "";
}
",
        "path": "input/input.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate input\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-input")
export class InputElement extends LitElement {
  @property({ attribute: "aria-disabled" }) ariaDisabled!: string;
  @property({ attribute: "disabled" }) disabled!: boolean = false;
  @property({ attribute: "placeholder" }) placeholder!: string = "";

  override render() {
    return html\`
      <input
      role="textbox"

      aria-disabled="\${this.ariaDisabled ?? ""}"
      >
        <slot></slot>
      </input>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-input": InputElement;
  }
}
",
        "path": "input/foundry-input.ts",
      },
    ],
    "framework": "lit",
  },
]
`;

exports[`cross-framework snapshots > generates stable snapshots for NavigationMenu edge-case props 1`] = `
[
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate navigation-menu\` to regenerate
import * as React from "react";
import { cn } from "../utils/cn.js";

export interface NavigationMenuProps extends React.HTMLAttributes<HTMLElement> {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  "aria-label"?: string;
  "data-state"?: string;
  /** Variant: orientation */
  orientation?: "horizontal" | "vertical";
}

const NavigationMenu = React.forwardRef<HTMLElement, NavigationMenuProps>(
  function NavigationMenu(
    {
  orientation = "horizontal",
      className,
      ...props
    },
    ref
  ) {
    return (
      <nav
        ref={ref} role="navigation"
        data-orientation={orientation !== undefined ? orientation : undefined}
        className={cn("navigation-menu", className)}
        {...props}
      />
    );
  }
);
NavigationMenu.displayName = "NavigationMenu";

export { NavigationMenu };
",
        "path": "navigation-menu/NavigationMenu.tsx",
      },
    ],
    "framework": "react",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate navigation-menu\` to regenerate -->
<script setup lang="ts">
import { computed, useAttrs } from "vue";

defineOptions({ name: "NavigationMenu" });

interface NavigationMenuProps {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  "aria-label"?: string;
  "data-state"?: string;
  /** Variant: orientation */
  orientation?: "horizontal" | "vertical";
  class?: string;
}

const props = withDefaults(defineProps<NavigationMenuProps>(), {
  "aria-label": "Main Navigation",
  "data-state": "closed",
  orientation: "horizontal",
});

const emit = defineEmits<{
  (event: "click", value: MouseEvent): void;
}>();

const attrs = useAttrs();
const className = computed(() => ["navigation-menu", props.class]);

function handleClick(event: MouseEvent): void {
  emit("click", event);
}
</script>

<template>
  <nav
  role="navigation"
  :data-orientation="props.orientation"
  :aria-disabled="props["aria-disabled"]"
  :aria-label="props["aria-label"]"
    :class="className"
    v-bind="attrs"
    @click="handleClick"
  >
    <slot />
  </nav>
</template>
",
        "path": "navigation-menu/NavigationMenu.vue",
      },
    ],
    "framework": "vue",
  },
  {
    "files": [
      {
        "content": "<!-- @generated by shadcnui-foundry — DO NOT EDIT MANUALLY -->
<!-- Run \`foundry generate navigation-menu\` to regenerate -->
<script lang="ts">
  interface Props {
  /** Accessibility attribute: aria-disabled */
  "aria-disabled"?: string;
  "aria-label"?: string;
  "data-state"?: string;
  /** Variant: orientation */
  orientation?: "horizontal" | "vertical";
    class?: string;
  }

  let props: Props = $props();
  const defaultProps = {
  "aria-label": "Main Navigation",
  "data-state": "closed",
  orientation: "horizontal",
  } as const;

  let propsWithDefaults = $derived({ ...defaultProps, ...props });
  let className = $derived(["navigation-menu", propsWithDefaults.class].filter(Boolean).join(" "));
</script>

<nav
  role="navigation"
  data-orientation={propsWithDefaults.orientation}
  {aria-disabled}={propsWithDefaults["aria-disabled"]}
  {aria-label}={propsWithDefaults["aria-label"]}
  class={className}
>
  <slot />
</nav>
",
        "path": "navigation-menu/navigation-menu.svelte",
      },
    ],
    "framework": "svelte",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate navigation-menu\` to regenerate
import { Component, Input } from "@angular/core";

@Component({
  selector: "foundry-navigation-menu",
  standalone: true,
  template: \`
    <div class="navigation-menu">
      <ng-content />
    </div>
  \`,
})
export class NavigationMenuComponent {
  @Input("aria-label") ariaLabel?: string = "Main Navigation";
  @Input("data-state") dataState?: string = "closed";
  @Input() orientation?: "horizontal" | "vertical" = "horizontal";
}
",
        "path": "navigation-menu/navigation-menu.component.ts",
      },
    ],
    "framework": "angular",
  },
  {
    "files": [
      {
        "content": "// @generated by shadcnui-foundry — DO NOT EDIT MANUALLY
// Run \`foundry generate navigation-menu\` to regenerate
import { LitElement, html } from "lit";
import { customElement, property } from "lit/decorators.js";

@customElement("foundry-navigation-menu")
export class NavigationMenuElement extends LitElement {
  @property({ attribute: "aria-disabled" }) ariaDisabled!: string;
  @property({ attribute: "aria-label" }) ariaLabel!: string = "Main Navigation";
  @property({ attribute: "data-state" }) dataState!: string = "closed";
  @property({ attribute: "orientation" }) orientation!: "horizontal" | "vertical" = "horizontal";

  override render() {
    return html\`
      <nav
      role="navigation"
      data-orientation="\${this.orientation ?? ""}"
      aria-disabled="\${this.ariaDisabled ?? ""}"
      aria-label="\${this.ariaLabel ?? ""}"
      >
        <slot></slot>
      </nav>
    \`;
  }
}

declare global {
  interface HTMLElementTagNameMap {
    "foundry-navigation-menu": NavigationMenuElement;
  }
}
",
        "path": "navigation-menu/foundry-navigation-menu.ts",
      },
    ],
    "framework": "lit",
  },
]
`;
